starting to show things in graph

--- a/src/webviews/apps/plus/graph/graph.html
+++ b/src/webviews/apps/plus/graph/graph.html
@@ -16,10 +16,11 @@
 				<h2 data-bind="description"></h2>
 			</section>
 			<section id="content">
-				<div id="chart"></div>
-				<div id="chart-empty-overlay" class="hidden">
-					<h1 data-bind="empty"></h1>
+				<div id="graph">
+					test
 				</div>
+				<li id="messages">
+				</li>
 			</section>
 			<section id="footer"></section>
 		</div>
