show repo commits

--- a/src/webviews/apps/plus/graph/graph.html
+++ b/src/webviews/apps/plus/graph/graph.html
@@ -21,6 +21,8 @@
 				</div>
 				<li id="messages">
 				</li>
+				<div id="commits">
+				</div>
 			</section>
 			<section id="footer"></section>
 		</div>
